Fix deprecation warnings. Update copyright.