@@ -1,3 +1,20 @@
+/*
+ * Jinx is Copyright 2010-2018 by Jeremy Brooks and Contributors
+ *
+ * Jinx is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Jinx is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Jinx.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package net.jeremybrooks.jinx.api;
 
 import net.jeremybrooks.jinx.Jinx;
@@ -46,7 +63,7 @@ public class PrefsApiTest {
     Person person = prefsApi.getContentType();
     assertNotNull(person);
     assertEquals(testUserId, person.getUserId());
-    assertEquals(new Integer(1), person.getContentType());
+    assertEquals(Integer.valueOf(1), person.getContentType());
   }
 
   @Test
@@ -54,8 +71,8 @@ public class PrefsApiTest {
     Person person = prefsApi.getGeoPerms();
     assertNotNull(person);
     assertEquals(testUserId, person.getUserId());
-    assertEquals(new Integer(1), person.getGeoPerms());
-    assertEquals(new Integer(1), person.getImportGeoExif());
+    assertEquals(Integer.valueOf(1), person.getGeoPerms());
+    assertEquals(Integer.valueOf(1), person.getImportGeoExif());
   }
 
   @Test
@@ -63,7 +80,7 @@ public class PrefsApiTest {
     Person person = prefsApi.getHidden();
     assertNotNull(person);
     assertEquals(testUserId, person.getUserId());
-    assertEquals(new Integer(1), person.getHidden());
+    assertEquals(Integer.valueOf(1), person.getHidden());
   }
 
   @Test
@@ -71,7 +88,7 @@ public class PrefsApiTest {
     Person person = prefsApi.getPrivacy();
     assertNotNull(person);
     assertEquals(testUserId, person.getUserId());
-    assertEquals(new Integer(1), person.getPrivacy());
+    assertEquals(Integer.valueOf(1), person.getPrivacy());
   }
 
   @Test
@@ -79,6 +96,6 @@ public class PrefsApiTest {
     Person person = prefsApi.getSafetyLevel();
     assertNotNull(person);
     assertEquals(testUserId, person.getUserId());
-    assertEquals(new Integer(1), person.getSafetyLevel());
+    assertEquals(Integer.valueOf(1), person.getSafetyLevel());
   }
 }
