@@ -1,5 +1,5 @@
 /*
- * Jinx is Copyright 2010-2014 by Jeremy Brooks and Contributors
+ * Jinx is Copyright 2010-2018 by Jeremy Brooks and Contributors
  *
  * Jinx is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -40,10 +40,10 @@ public class GroupsMembersTest {
         assertNotNull(members);
         assertEquals("ok", members.getStat());
         assertEquals(0, members.getCode());
-        assertEquals(new Integer(1), members.getPage());
-        assertEquals(new Integer(12655), members.getPages());
-        assertEquals(new Integer(10), members.getPerPage());
-        assertEquals(new Integer(126546), members.getTotal());
+        assertEquals(Integer.valueOf(1), members.getPage());
+        assertEquals(Integer.valueOf(12655), members.getPages());
+        assertEquals(Integer.valueOf(10), members.getPerPage());
+        assertEquals(Integer.valueOf(126546), members.getTotal());
         List<Members.Member> list = members.getMemberList();
         assertNotNull(list);
         assertEquals(10, list.size());
