@@ -1,5 +1,5 @@
 /*
- * Jinx is Copyright 2010-2014 by Jeremy Brooks and Contributors
+ * Jinx is Copyright 2010-2018 by Jeremy Brooks and Contributors
  *
  * Jinx is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -40,17 +40,17 @@ public class MachinetagsTest {
         assertNotNull(namespaces);
         assertEquals("ok", namespaces.getStat());
         assertEquals(0, namespaces.getCode());
-        assertEquals(new Integer(10), namespaces.getPage());
-        assertEquals(new Integer(4033), namespaces.getTotal());
-        assertEquals(new Integer(10), namespaces.getPerPage());
-        assertEquals(new Integer(404), namespaces.getPages());
+        assertEquals(Integer.valueOf(10), namespaces.getPage());
+        assertEquals(Integer.valueOf(4033), namespaces.getTotal());
+        assertEquals(Integer.valueOf(10), namespaces.getPerPage());
+        assertEquals(Integer.valueOf(404), namespaces.getPages());
 
         assertNotNull(namespaces.getNamespaceList());
         assertEquals(10, namespaces.getNamespaceList().size());
         Namespaces.Namespace namespace = namespaces.getNamespaceList().get(0);
         assertEquals("aircraft", namespace.getNamespace());
-        assertEquals(new Integer(93), namespace.getUsage());
-        assertEquals(new Integer(6), namespace.getPredicates());
+        assertEquals(Integer.valueOf(93), namespace.getUsage());
+        assertEquals(Integer.valueOf(6), namespace.getPredicates());
     }
 
     @Test
@@ -61,17 +61,17 @@ public class MachinetagsTest {
         assertNotNull(pairs);
         assertEquals("ok", pairs.getStat());
         assertEquals(0, pairs.getCode());
-        assertEquals(new Integer(10), pairs.getPage());
-        assertEquals(new Integer(13912), pairs.getTotal());
-        assertEquals(new Integer(10), pairs.getPerPage());
-        assertEquals(new Integer(1392), pairs.getPages());
+        assertEquals(Integer.valueOf(10), pairs.getPage());
+        assertEquals(Integer.valueOf(13912), pairs.getTotal());
+        assertEquals(Integer.valueOf(10), pairs.getPerPage());
+        assertEquals(Integer.valueOf(1392), pairs.getPages());
         assertNotNull(pairs.getPairList());
         assertEquals(10, pairs.getPairList().size());
         Pairs.Pair pair = pairs.getPairList().get(0);
         assertEquals("accessceramics:width", pair.getPair());
         assertEquals("accessceramics", pair.getNamespace());
         assertEquals("width", pair.getPredicate());
-        assertEquals(new Integer(1961), pair.getUsage());
+        assertEquals(Integer.valueOf(1961), pair.getUsage());
     }
 
     @Test
@@ -82,16 +82,16 @@ public class MachinetagsTest {
         assertNotNull(predicates);
         assertEquals("ok", predicates.getStat());
         assertEquals(0, predicates.getCode());
-        assertEquals(new Integer(10), predicates.getPage());
-        assertEquals(new Integer(7039), predicates.getTotal());
-        assertEquals(new Integer(10), predicates.getPerPage());
-        assertEquals(new Integer(704), predicates.getPages());
+        assertEquals(Integer.valueOf(10), predicates.getPage());
+        assertEquals(Integer.valueOf(7039), predicates.getTotal());
+        assertEquals(Integer.valueOf(10), predicates.getPerPage());
+        assertEquals(Integer.valueOf(704), predicates.getPages());
         assertNotNull(predicates.getPredicateList());
         assertEquals(10, predicates.getPredicateList().size());
         Predicates.Predicate predicate = predicates.getPredicateList().get(0);
         assertEquals("admin_level", predicate.getPredicate());
-        assertEquals(new Integer(2), predicate.getUsage());
-        assertEquals(new Integer(1), predicate.getNamespaces());
+        assertEquals(Integer.valueOf(2), predicate.getUsage());
+        assertEquals(Integer.valueOf(1), predicate.getNamespaces());
     }
 
     @Test
@@ -102,15 +102,15 @@ public class MachinetagsTest {
         assertNotNull(values);
         assertEquals("ok", values.getStat());
         assertEquals(0, values.getCode());
-        assertEquals(new Integer(1), values.getPage());
-        assertEquals(new Integer(7), values.getTotal());
-        assertEquals(new Integer(500), values.getPerPage());
-        assertEquals(new Integer(1), values.getPages());
+        assertEquals(Integer.valueOf(1), values.getPage());
+        assertEquals(Integer.valueOf(7), values.getTotal());
+        assertEquals(Integer.valueOf(500), values.getPerPage());
+        assertEquals(Integer.valueOf(1), values.getPages());
         assertNotNull(values.getValueList());
         assertEquals(7, values.getValueList().size());
         Values.Value value = values.getValueList().get(0);
         assertEquals("holden", value.getValue());
-        assertEquals(new Integer(4), value.getUsage());
+        assertEquals(Integer.valueOf(4), value.getUsage());
         assertNull(value.getNamespace());
         assertNull(value.getPredicate());
         assertNull(value.getFirstAdded());
@@ -125,15 +125,15 @@ public class MachinetagsTest {
         assertNotNull(values);
         assertEquals("ok", values.getStat());
         assertEquals(0, values.getCode());
-        assertEquals(new Integer(1), values.getPage());
-        assertEquals(new Integer(7), values.getTotal());
-        assertEquals(new Integer(500), values.getPerPage());
-        assertEquals(new Integer(1), values.getPages());
+        assertEquals(Integer.valueOf(1), values.getPage());
+        assertEquals(Integer.valueOf(7), values.getTotal());
+        assertEquals(Integer.valueOf(500), values.getPerPage());
+        assertEquals(Integer.valueOf(1), values.getPages());
         assertNotNull(values.getValueList());
         assertEquals(7, values.getValueList().size());
         Values.Value value = values.getValueList().get(0);
         assertEquals("mazda", value.getValue());
-        assertEquals(new Integer(8), value.getUsage());
+        assertEquals(Integer.valueOf(8), value.getUsage());
         assertEquals("car", value.getNamespace());
         assertEquals("make", value.getPredicate());
         assertEquals("1279193548", value.getFirstAdded());
