@@ -1,5 +1,5 @@
 /*
- * Jinx is Copyright 2010-2014 by Jeremy Brooks and Contributors
+ * Jinx is Copyright 2010-2018 by Jeremy Brooks and Contributors
  *
  * Jinx is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -320,8 +320,8 @@ public class PhotosTest {
 		assertEquals("california", tag.getTag());
 		assertFalse(tag.isMachineTag());
 
-		assertEquals(new Float(37.789899), photoInfo.getLatitude());
-		assertEquals(new Float(-122.401921), photoInfo.getLongitude());
+		assertEquals(Float.valueOf(37.789899f), photoInfo.getLatitude());
+		assertEquals(Float.valueOf(-122.401921f), photoInfo.getLongitude());
 		assertEquals(15, (int)photoInfo.getAccuracy());
 		assertEquals(0, (int)photoInfo.getContext());
 		assertEquals("GddgqTpTUb8LgT93hw", photoInfo.getPlaceId());
@@ -406,8 +406,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("9d4016832e", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(-37.909196), p.getLatitude());
-		assertEquals(new Float(145.35505), p.getLongitude());
+		assertEquals(Float.valueOf(-37.909196f), p.getLatitude());
+		assertEquals(Float.valueOf(145.35505f), p.getLongitude());
 		assertEquals(16, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertEquals("W9QPztNQUrMj2JPq", p.getPlaceId());
@@ -504,8 +504,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("c9a3f76573", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -592,8 +592,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("72f2fd3ff2", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -691,8 +691,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("2e05eb741c", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -789,8 +789,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("720b85cdbe", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -888,8 +888,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("c57e4fb02e", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -987,8 +987,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("f985684cf1", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
@@ -1085,8 +1085,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("568a3f2614", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(37.765819), p.getLatitude());
-		assertEquals(new Float(-122.242912), p.getLongitude());
+		assertEquals(Float.valueOf(37.765819f), p.getLatitude());
+		assertEquals(Float.valueOf(-122.242912f), p.getLongitude());
 		assertEquals(16, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertEquals("FmOEZR5UV7P7KfBdxg", p.getPlaceId());
@@ -1183,8 +1183,8 @@ public class PhotosTest {
 		assertEquals("", p.getMachineTags());
 		assertEquals("80846b32e2", p.getOriginalSecret());
 		assertEquals("jpg", p.getOriginalFormat());
-		assertEquals(new Float(0.0), p.getLatitude());
-		assertEquals(new Float(0.0), p.getLongitude());
+		assertEquals(Float.valueOf(0.0f), p.getLatitude());
+		assertEquals(Float.valueOf(0.0f), p.getLongitude());
 		assertEquals(0, (int) p.getAccuracy());
 		assertEquals(0, (int) p.getContext());
 		assertNull(p.getPlaceId());
