@@ -1,3 +1,20 @@
+/*
+ * Jinx is Copyright 2010-2018 by Jeremy Brooks and Contributors
+ *
+ * Jinx is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Jinx is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Jinx.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package net.jeremybrooks.jinx.response.prefs;
 
 import com.google.gson.Gson;
@@ -19,7 +36,7 @@ public class PrefsTest {
     Person person = new Gson().fromJson(reader, Person.class);
     assertNotNull(person);
     assertEquals("85853333@N00", person.getUserId());
-    assertEquals(new Integer(1), person.getContentType());
+    assertEquals(Integer.valueOf(1), person.getContentType());
   }
 
   @Test
@@ -28,8 +45,8 @@ public class PrefsTest {
     Person person = new Gson().fromJson(reader, Person.class);
     assertNotNull(person);
     assertEquals("85853333@N00", person.getUserId());
-    assertEquals(new Integer(1), person.getGeoPerms());
-    assertEquals(new Integer(1), person.getImportGeoExif());
+    assertEquals(Integer.valueOf(1), person.getGeoPerms());
+    assertEquals(Integer.valueOf(1), person.getImportGeoExif());
   }
 
   @Test
@@ -38,7 +55,7 @@ public class PrefsTest {
     Person person = new Gson().fromJson(reader, Person.class);
     assertNotNull(person);
     assertEquals("85853333@N00", person.getUserId());
-    assertEquals(new Integer(1), person.getHidden());
+    assertEquals(Integer.valueOf(1), person.getHidden());
   }
 
   @Test
@@ -47,7 +64,7 @@ public class PrefsTest {
     Person person = new Gson().fromJson(reader, Person.class);
     assertNotNull(person);
     assertEquals("85853333@N00", person.getUserId());
-    assertEquals(new Integer(1), person.getPrivacy());
+    assertEquals(Integer.valueOf(1), person.getPrivacy());
   }
 
   @Test
@@ -56,6 +73,6 @@ public class PrefsTest {
     Person person = new Gson().fromJson(reader, Person.class);
     assertNotNull(person);
     assertEquals("85853333@N00", person.getUserId());
-    assertEquals(new Integer(1), person.getSafetyLevel());
+    assertEquals(Integer.valueOf(1), person.getSafetyLevel());
   }
 }
